syntax = "proto3";
package recsys;

option java_multiple_files = true;
option java_package = "recsys_proxy_cache.protos";
option go_package = "github.com/cjmcgraw/recsys-proxy-cache;recsys_proxy_cache";

service RecsysProxyCache {
    /**
    Get scores retrieves a score for every item given,
    from the associated context
     */
    rpc GetScores(ScoreRequest) returns (ScoreResponse);
}

message Values {
    repeated string values = 1;
}

message Context {
    map<string, Values> fields = 1;
}

message ScoreRequest {
    // request will correspond to exactly 1 value in the output scores
    repeated int64 items = 1;
    Context context = 2;
    string modelName = 3;
}

message ScoreResponse {
    // exactly same size as input items
    repeated double scores = 1;
}
